# Example_SKSE_CMake_po3

./: CMakeLists.txt  README.md  plugin-definition-interface.h  plugin-definition-macros.h  plugin-definition.h  plugin.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: add_skse_plugin.cmake
